--- a/src/App/index.css
+++ b/src/App/index.css
@@ -417,5 +417,124 @@ polyline {
   display: grid;
   margin: 10px;
   text-decoration: underline;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
+}
+
+
+.switch-text{
+  rotate: 90deg;
+  font-size: .65em;
+  transform: rotateY(180deg);
+}
+
+.text-left{
+  transform: rotate(180deg);
+  font-size: 1.5em;
+  color: #fff;
+  writing-mode: vertical-rl;
+}
+
+/* Switch starts here */
+.rocker {
+  border-bottom: 0.5em solid #aaa;
+  rotate: 270deg;
+  transform: rotateX(180deg);
+}
+
+.rocker::before {
+  content: "";
+  position: absolute;
+  top: 0.5em;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(335deg, rgba(170, 170, 170, 1) 45%, rgb(86 86 86 / 86%) 100%);
+}
+
+.switch-left,
+.switch-right {
+transition: 0.2s;
+}
+
+.switch-left {
+height: 2.4em;
+width: 2.75em;
+left: 0.85em;
+bottom: 0.4em;
+background-color: #ddd;
+transform: rotate(15deg) skewX(15deg);
+}
+
+.switch-right {
+right: 0.5em;
+bottom: 0;
+background-color: #bd5757;
+color: #fff;
+}
+
+.switch-left::before,
+.switch-right::before {
+content: "";
+position: absolute;
+width: 0.4em;
+height: 2.45em;
+bottom: -0.45em;
+background-color: #ccc;
+transform: skewY(-65deg);
+}
+
+.switch-left::before {
+left: -0.4em;
+}
+
+.switch-right::before {
+right: -0.375em;
+background-color: transparent;
+transform: skewY(65deg);
+}
+
+input:checked + .switch-left {
+background-color: #0084d0;
+color: #fff;
+bottom: 0px;
+left: 0.5em;
+height: 2.5em;
+width: 3em;
+transform: rotate(0deg) skewX(0deg);
+}
+
+input:checked + .switch-left::before {
+background-color: transparent;
+width: 3.0833em;
+}
+
+input:checked + .switch-left + .switch-right {
+background-color: #ddd;
+color: #888;
+bottom: 0.4em;
+right: 0.8em;
+height: 2.4em;
+width: 2.75em;
+transform: rotate(-15deg) skewX(-15deg);
+}
+
+input:checked + .switch-left + .switch-right::before {
+background-color: #ccc;
+}
+
+/* Keyboard Users */
+input:focus + .switch-left {
+color: #333;
+}
+
+input:checked:focus + .switch-left {
+color: #fff;
+}
+
+input:focus + .switch-left + .switch-right {
+color: #fff;
+}
+
+input:checked:focus + .switch-left + .switch-right {
+color: #333;
 }
