Scrollbar for mobile

--- a/src/App/index.css
+++ b/src/App/index.css
@@ -538,3 +538,9 @@ color: #fff;
 input:checked:focus + .switch-left + .switch-right {
 color: #333;
 }
+
+.scrollhide{
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  --webikit-scrollbar-width: none;
+}
